Fix rendering on mobile withrawals (#325)

--- a/gzWeb/_app/accountManagement/accountManagement.css
+++ b/gzWeb/_app/accountManagement/accountManagement.css
@@ -492,6 +492,7 @@
 .auth.mgmt-modal .withdraw .left-content {
     position: relative;
     padding-right: 40px;
+    display: inline-block;
 }
 .auth.mgmt-modal .deposit .left-content .field-ok,
 .auth.mgmt-modal .withdraw .left-content .field-ok {
